NTI-515 - Added margin to ensure there's room for the box-shadow; center-aligned thank you checkmark

--- a/src/main/js/assessment/components/HeaderSurvey.scss
+++ b/src/main/js/assessment/components/HeaderSurvey.scss
@@ -5,6 +5,7 @@
 	@extend .header.assessment.assignment;
 	display: block;
 	padding-right: 0.625rem;
+	text-align: center;
 
 	&::before {
 		@extend %icon-survey;
@@ -18,6 +19,8 @@
 		border: 0;
 		border-radius: 40px;
 		box-shadow: 0 0 0 1px $secondary-green;
+		display: inline-block;
+		margin: 1px; // ensure room for the box shadow
 	}
 
 	.links {
